--- a/guestbook/kustomization.yml
+++ b/guestbook/kustomization.yml
@@ -3,9 +3,13 @@ resources:
   - deployment.yml
   - service.yml
   - namespace.yml
+  - redis.yml
 #  - pre-sync-job.yml
 #  - cron-job.yml
 
 namespace: guestbook
 
 namePrefix: demo-
+
+commonAnnotations:
+  demo: argo-cd
